# WhiteEngine

./: .gitignore  CMakeLists.txt  WhiteEngine.sln
Engine/: CMakeLists.txt  CoreTypes.h  Engine.vcxproj  Engine.vcxproj.filters  design.txt  emacro.h  packages.config  test.cpp  test.h
Engine/Asset/: CompressionBC.cpp  CompressionBC.hpp  CompressionETC.cpp  CompressionETC.hpp  D3DShaderCompiler.cpp  D3DShaderCompiler.h  DDSX.cpp  DDSX.h  DStorageAsset.cpp  DStorageAsset.h  EffectAsset.cpp  EffectAsset.h  EffectX.cpp  EffectX.h  FileFormat.h  Loader.cpp  Loader.hpp  MaterialAsset.h  MaterialX.cpp  MaterialX.h  MeshAsset.h  MeshX.cpp  MeshX.h  RayShaderAsset.h  RayTracingX.cpp  RayTracingX.h  ShaderAsset.cpp  ShaderAsset.h  ShaderLoadingDesc.h  TexCompression.cpp  TexCompression.hpp  TextureX.cpp  TextureX.h  TrinfAsset.h  WSLAssetX.h
Engine/Core/: AssetResourceScheduler.cpp  AssetResourceScheduler.h  Compression.cpp  Compression.h  LFile.h  Materail.h  Mesh.cpp  Mesh.h  ParallelFor.h  PlatformAtomics.h  PlatformMemory.h  ResourcesHolder.cpp  ResourcesHolder.h  WSLEvaluator.cpp
Engine/D3D12/: Adapter.d3d12.cpp  Adapter.h  Allocation.cpp  Allocation.h  BuiltInRayTracingShaders.cpp  BuiltInRayTracingShaders.h  CommandContext.d3d12.cpp  CommandContext.h  CommandList.d3d12.cpp  CommandListManager.d3d12.cpp  Common.h  ConstantBuffer.h  Context.d3d12.cpp  Context.h  ContextStateCache.d3d12.cpp  ContextStateCache.h  Convert.h  D3D12RayTracing.cpp  D3D12RayTracing.h  D3DCommandList.h  DescriptorCache.d3d12.cpp  DescriptorCache.h  Descriptors.cpp  Descriptors.h  DirectStorage.cpp  DirectStorage.h  Display.d3d12.cpp  Display.h  Fence.cpp  Fence.h  FrameBuffer.h  GraphicsBuffer.d3d12.cpp  GraphicsBuffer.hpp  GraphicsPipelineState.d3d12.cpp  GraphicsPipelineState.h  HardwareShader.d3d12.cpp  HardwareShader.h  InputLayout.hpp  NodeDevice.d3d12.cpp  NodeDevice.h  (+36 more)
Engine/Developer/: DisjointSet.h  MeshBuild.h
Engine/Math/: BoxSphereBounds.h  IntRect.h  InverseRotationMatrix.h  RotationMatrix.h  Sphere.h
Engine/Render/: BuiltInRayTracingShader.cpp  BuiltInRayTracingShader.h  BuiltInShader.cpp  BuiltInShader.h  CommonRenderResources.cpp  CommonRenderResources.h  CommonTextureImpl.hcc  DeviceCaps.h  DrawEvent.h  FrameBuffer.cpp  ICommandList.cpp  IDevice.h  IGPUResourceView.h  IGraphicsBuffer.hpp  IRayContext.h  IRayDevice.h  IRayTracingPipelineState.h  IRayTracingShader.h  IShaderCompose.h  ITexture.cpp  InputLayout.cpp  PipelineStateUtility.cpp  PipelineStateUtility.h  PipleState.cpp  PipleState.h  PixelShaderUtils.cpp  RayTracingDefinitions.h  RenderObject.cpp  Shader.cpp  Shader.h  ShaderCore.cpp  ShaderCore.h  ShaderDB.cpp  ShaderParameterStruct.h  ShaderParameters.h  ShaderParamterTraits.hpp  ShaderResource.cpp  TextureSampleDesc.h  ViewPort.h
Engine/RenderInterface/: BuiltInRayTracingShader.h  BuiltInShader.cpp  BuiltInShader.h  Color_T.cpp  Color_T.hpp  CommandListExecutor.cpp  CommonRenderResources.cpp  CommonTextureImpl.hcc  DStorage.cpp  DStorage.h  DataStructures.h  DeviceCaps.h  DrawEvent.cpp  GraphicsBuffer.cpp  ICommandContext.h  ICommandList.cpp  ICommandList.h  IContext.cpp  IContext.h  IDevice.h  IDisplay.h  IFormat.hpp  IFrameBuffer.h  IGPUResourceView.h  IGraphicsBuffer.hpp  IGraphicsPipelineState.h  IRayContext.h  IRayDevice.h  IRayTracingGeometry.cpp  IRayTracingGeometry.h  IRayTracingPipelineState.cpp  IRayTracingScene.cpp  IRayTracingScene.h  IRayTracingShader.cpp  ITexture.hpp  Indirect.h  InputLayout.hpp  PipelineStateUtility.cpp  PipelineStateUtility.h  PipleState.cpp  (+23 more)
Engine/Renderer/: Nanite.h  ScreenRendering.cpp  ScreenRendering.h  ScreenSpaceDenoiser.cpp  ScreenSpaceDenoiser.h  ShadowRendering.cpp  ShadowRendering.h  VolumeRendering.cpp  VolumeRendering.h
Engine/Runtime/: AssetResourceScheduler.h  CameraController.cpp  Compression.cpp  DirectionalLight.cpp  DirectionalLight.h  GizmosElements.cpp  GizmosElements.h  Light.cpp  Light.h  MemStack.cpp  MemStack.h  Path.cpp  Resource.h  SceneClasses.h  SceneInfo.h  SceneRendering.cpp  WSLBuilder.h  WSLEvaluator.h
Engine/Shaders/: ACES.h  ByteBuffer.hlsl  ByteBuffer.wsl  Common.h  GammaCorrectionCommon.h  GizmosElementsVertexShader.wsl  GizmosPixelShader.wsl  MonteCarlo.h  Platform.h  Random.h  RandomSequence.h  ShadowDepthPixelShader.wsl  ShadowDepthVertexShader.wsl  ShadowProjectionPixelShader.wsl  ShadowProjectionVertexShader.wsl  Util.h
Engine/System/: NinthTimer.cpp  NinthTimer.h  SystemEnvironment.cpp  SystemEnvironment.h  TimeValue.h
Engine/Win32/: File.cpp  NTHandle.cpp  NTHandle.h
WBase/: CMakeLists.txt  ConcurrentHashMap.h  UnboundedQueue.h  WBase.cpp  WBase.natvis  WBase.vcxproj  WBase.vcxproj.filters  addressof.hpp  algorithm.hpp  any.cpp  any.h  any_iterator.hpp  array.hpp  cache.hpp  cassert.cpp  cassert.h  cast.hpp  cctype.h  cformat.cpp  cformat.h  concurrency.cpp  concurrency.h  container.hpp  cstdio.cpp  cstdio.h  cstring.h  ctime.h  cwctype.cpp  cwctype.h  deref_op.hpp  enum.hpp  examiner.hpp  exception.cpp  exception.h  exception_type.h  functional.hpp  functor.hpp  future.hpp  id.hpp  integer_sequence.hpp  (+42 more)
WBase/MCF/: Abstract.hpp
WBase/folly/: Demangle.cpp  Demangle.h  Expected.h  Memory.h  Portability.h  SharedMutex.h  SingletonThreadLocal.h  Traits.h  (+1 more)
WFramework/: CMakeLists.txt  WFramework.vcxproj  WFramework.vcxproj.filters
WScheme/: CMakeLists.txt  Configuration.cpp  Configuration.h  Lexical.cpp  Lexical.h  SContext.cpp  SContext.h  WSchemREPL.h  WScheme.cpp  WScheme.h  WScheme.vcxproj  WScheme.vcxproj.filters  WSchemeA.cpp  WSchemeA.h  doc.txt  inc_Sxml.h  sdef.cpp  sdef.h
(+618 files in other folders)
